// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line Count Limiter should have 2 1`] = `
[
  "
    display: -webkit-box;
    -webkit-line-clamp: ",
  "2",
  ";
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
  ",
]
`;

exports[`Line Count Limiter should have 4 1`] = `
[
  "
    display: -webkit-box;
    -webkit-line-clamp: ",
  "4",
  ";
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
  ",
]
`;
